@@ -10,17 +10,23 @@
  */
 package org.radixware.kernel.server.reports.fo;
 
+import org.radixware.kernel.common.defs.ads.clazz.sql.report.html.CellContents;
+import org.radixware.kernel.common.defs.ads.clazz.sql.report.html.AdjustedCell;
 import java.awt.Color;
 import java.awt.Graphics2D;
 import java.awt.Image;
+import java.awt.geom.Rectangle2D;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStream;
 import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -32,6 +38,13 @@ import javax.imageio.ImageIO;
 import javax.xml.stream.XMLOutputFactory;
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
+import org.apache.batik.anim.dom.SAXSVGDocumentFactory;
+import org.apache.batik.bridge.BridgeContext;
+import org.apache.batik.bridge.GVTBuilder;
+import org.apache.batik.bridge.UserAgentAdapter;
+import org.apache.batik.gvt.GraphicsNode;
+import org.apache.batik.util.XMLResourceDescriptor;
+import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportAbstractAppearance;
 import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportAbstractAppearance.Border;
 import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportAbstractAppearance.Font;
 import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportBand;
@@ -40,6 +53,8 @@ import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportDbImageCel
 import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportForm;
 import org.radixware.kernel.common.defs.ads.clazz.sql.report.AdsReportWidget;
 import org.radixware.kernel.common.defs.ads.clazz.sql.report.IReportWidgetContainer;
+import org.radixware.kernel.common.defs.ads.clazz.sql.report.html.CellParagraph;
+import org.radixware.kernel.common.defs.ads.clazz.sql.report.utils.AdsReportUtils;
 import org.radixware.kernel.common.enums.EImageScaleType;
 import org.radixware.kernel.common.enums.EReportBandType;
 import org.radixware.kernel.common.enums.EReportBorderStyle;
@@ -50,9 +65,14 @@ import org.radixware.kernel.common.enums.EReportExportFormat;
 import org.radixware.kernel.common.utils.FileUtils;
 import org.radixware.kernel.common.utils.XmlColor;
 import org.radixware.kernel.server.reports.AbstractReportGenerator;
+import org.radixware.kernel.server.reports.ReportColumnsAdjuster;
 import org.radixware.kernel.server.reports.ReportGenerationException;
 import org.radixware.kernel.server.reports.ReportStateInfo;
 import org.radixware.kernel.server.types.Report;
+import org.w3c.dom.svg.SVGAnimatedLength;
+import org.w3c.dom.svg.SVGDocument;
+import org.w3c.dom.svg.SVGLength;
+import org.w3c.dom.svg.SVGSVGElement;
 
 public class FoReportGenerator extends AbstractReportGenerator {
 
@@ -63,6 +83,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
     private boolean someBandOnPageDisplayed = false;
     private double curPageHeight = 0;
     private double drawnBandHeight = 0;//высота отрисованной части полосы
+    private AdsReportBand drawnBand = null;//сама не отрисованная полоса
     private double drawnBandHeightOnCurPage = 0;
 
     enum CellWrappingState {
@@ -100,6 +121,29 @@ public class FoReportGenerator extends AbstractReportGenerator {
         return XmlColor.mergeColor(color); // same format
     }
 
+    public static double[] getBorderSize(AdsReportAbstractAppearance container, boolean wasSeparated) {
+        double vBorder = 0;
+        double hBorder = 0;
+        if (container != null) {
+            Border border = container.getBorder();
+            if (border != null) {
+                if (border.getOnLeft()) {
+                    hBorder += border.getLeftThicknessMm();
+                }
+                if (border.getOnRight()) {
+                    hBorder += border.getRightThicknessMm();
+                }
+                if (border.getOnTop() && !wasSeparated) {
+                    vBorder += border.getTopThicknessMm();
+                }
+                if (border.getOnBottom()) {
+                    vBorder += border.getBottomThicknessMm();
+                }
+            }
+        }
+        return new double[]{vBorder, hBorder};
+    }
+
     private static void setBlockContainerParams(final FoBlockContainer blockContainer, double left, double top, double width, double height, final String bgColor, final String fgColor, final Border border, final Font font, CellWrappingState wrappingState) throws XMLStreamException {
         blockContainer.setAbsolutePositionFixed();
 
@@ -127,36 +171,53 @@ public class FoReportGenerator extends AbstractReportGenerator {
         }
 
         if (border != null && border.isDisplayed()) {
-            final FoBlockContainer.BorderStyle foBorderStyle = borderStyleToFoBorderStyle(border.getStyle());
-            final double borderThicknessMm = border.getThicknessMm();
-            final String borderColor = color2FoColor(border.getColor());
+//            final FoBlockContainer.BorderStyle foBorderStyle = borderStyleToFoBorderStyle(border.getStyle());
+//            final double borderThicknesPts = border.getThicknessMm();
+//            final double borderThicknessMm = border.getThicknessMm();
+//            final String borderColor = color2FoColor(border.getColor());
 
-            if (border.isOnLeft() && border.isOnRight() && border.isOnTop() && border.isOnBottom() && wrappingState == CellWrappingState.NO_WRAPPED) {
-                blockContainer.setBorder(foBorderStyle, borderColor, border.getThicknessMm());
-                top += borderThicknessMm;
-                left += borderThicknessMm;
-                width -= 2 * borderThicknessMm;     // deprecated: FOP draw top border inside the cell, but other - outside cell,
-                height -= 2 * borderThicknessMm;    // and if top border presented, the bottom border moved twice.
-            } else {
+//            if (border.isOnLeft() && border.isOnRight() && border.isOnTop() && border.isOnBottom() && wrappingState == CellWrappingState.NO_WRAPPED) {
+//                blockContainer.setBorder(foBorderStyle, borderColor, borderThicknesPts);
+//                top += borderThicknessMm;
+//                left += borderThicknessMm;
+//                width -= 2 * borderThicknessMm;     // deprecated: FOP draw top border inside the cell, but other - outside cell,
+//                height -= 2 * borderThicknessMm;    // and if top border presented, the bottom border moved twice.
+//            } else {
                 if (border.isOnLeft()) {
-                    blockContainer.setBorderLeft(foBorderStyle, borderColor, borderThicknessMm);
+                    double borderThicknessMm = border.getLeftThicknessMm();
+                    blockContainer.setBorderLeft(
+                            borderStyleToFoBorderStyle(border.getLeftStyle()), 
+                            color2FoColor(border.getLeftColor()), 
+                            borderThicknessMm);
                     left += borderThicknessMm;
                     width -= borderThicknessMm;
                 }
                 if (border.isOnRight()) {
-                    blockContainer.setBorderRight(foBorderStyle, borderColor, borderThicknessMm);
+                    double borderThicknessMm = border.getRightThicknessMm();
+                    blockContainer.setBorderRight(
+                            borderStyleToFoBorderStyle(border.getRightStyle()), 
+                            color2FoColor(border.getRightColor()), 
+                            borderThicknessMm);
                     width -= borderThicknessMm;
                 }
                 if (border.isOnTop() && (wrappingState == CellWrappingState.NO_WRAPPED || wrappingState == CellWrappingState.FIRST_PART_WRAPPED_CELL)) {
-                    blockContainer.setBorderTop(foBorderStyle, borderColor, borderThicknessMm);
+                    double borderThicknessMm = border.getTopThicknessMm();
+                    blockContainer.setBorderTop(
+                            borderStyleToFoBorderStyle(border.getTopStyle()), 
+                            color2FoColor(border.getTopColor()), 
+                            borderThicknessMm);
                     top += borderThicknessMm;
                     height -= borderThicknessMm;
                 }
                 if (border.isOnBottom() && (wrappingState == CellWrappingState.NO_WRAPPED || wrappingState == CellWrappingState.LAST_PART_WRAPPED_CELL)) {
-                    blockContainer.setBorderBottom(foBorderStyle, borderColor, borderThicknessMm);
+                    double borderThicknessMm = border.getBottomThicknessMm();
+                    blockContainer.setBorderBottom(
+                            borderStyleToFoBorderStyle(border.getBottomStyle()), 
+                            color2FoColor(border.getBottomColor()), 
+                            borderThicknessMm);
                     height -= borderThicknessMm;
                 }
-            }
+//            }
         }
 
         blockContainer.setLeft(left);
@@ -165,32 +226,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
         blockContainer.setHeight(height);
     }
 
-//    private boolean viewCellBorder(final AdsReportCell cell, final FoBlockContainer bandBlockContainer) throws XMLStreamException {
-//        if (!cell.isVisible() || !cell.getBorder().isDisplayed()) {
-//            return false;
-//        }
-//
-//        final FoBlockContainer cellBlockContainer = bandBlockContainer.addNewBlockContainer();
-//        cellBlockContainer.begin();
-//
-//        final AdsReportForm rootForm = getRootForm();
-//
-//        setBlockContainerParams(cellBlockContainer,
-//                cell.getLeftMm() + rootForm.getMargin().getLeftMm(),
-//                cell.getTopMm() + getCurHeight(),
-//                cell.getWidthMm(),
-//                cell.getHeightMm(),
-//                null /*bcolor*/,
-//                null /*fcolor*/,
-//                cell.getBorder(),
-//                null /*font*/);
-//
-//        cellBlockContainer.addEmptyBlock(); // for xml validation
-//
-//        cellBlockContainer.end();
-//        return true;
-//    }  
-    private boolean viewCell(final AdsReportCell cell, AdjustedCell adjustedCell, final AdsReportBand band, FoBlockContainer bandBlockContainer/*, boolean wrapping, boolean isNewPageRequired */) throws XMLStreamException, ReportGenerationException {
+    private boolean viewCell(final AdsReportCell cell, AdjustedCell adjustedCell, final AdsReportBand band, FoBlockContainer bandBlockContainer/*, boolean wrapping, boolean isNewPageRequired */, ReportGenData currentGenData) throws XMLStreamException, ReportGenerationException {
         if (!cell.isVisible()) {
             return false;
         }
@@ -198,52 +234,51 @@ public class FoReportGenerator extends AbstractReportGenerator {
 
         FoBlockContainer cellBlockContainer;
         final String content = cell.getRunTimeContent();
-        double marginMm = calcCellMargin(cell, adjustedCell.wasSeparated());
+        double marginMm = calcCellTopMargin(cell, adjustedCell.wasSeparated());
         if ((cell.getCellType() == EReportCellType.IMAGE || cell.getCellType() == EReportCellType.DB_IMAGE || cell.getCellType() == EReportCellType.CHART)
                 && content != null && !content.isEmpty()) {
 
-            cellBlockContainer = createCellContainer(cell, bandBlockContainer, cell.getHeightMm(), cellTopMm + getCurHeightMm(), marginMm, CellWrappingState.NO_WRAPPED);
+            double[] bordersSize = getBorderSize(cell, adjustedCell.wasSeparated());
+            double vBorder = bordersSize[0];
+            double hBorder = bordersSize[1];
+            cellBlockContainer = createCellContainer(cell, bandBlockContainer, cell.getHeightMm(), cellTopMm + getCurHeightMm(), marginMm, calcCellTopBorder(cell, adjustedCell), CellWrappingState.NO_WRAPPED, currentGenData);
             lastBandPartHeight = cellTopMm + cell.getHeightMm();
 
             FoBlock block = cellBlockContainer.addNewBlock();
             block.begin();
+            block.setLeftMargin(cell.getMarginLeftMm());
+            block.setRightMargin(cell.getMarginRightMm());
+            block.setFontSize(0);
+            
             FoExternalGraphic externalGraphic = block.addNewExternalGraphic();
             externalGraphic.begin();
             externalGraphic.setSrc(content);
 
-            double vBorder = 0;
-            double hBorder = 0;
-            if (cell.getBorder() != null) {
-                double t = cell.getBorder().getThicknessMm();
-                if (cell.getBorder().getOnLeft()) {
-                    hBorder += t;
-                }
-                if (cell.getBorder().getOnRight()) {
-                    hBorder += t;
-                }
-                if (cell.getBorder().getOnTop()) {
-                    vBorder += t;
-                }
-                if (cell.getBorder().getOnBottom()) {
-                    vBorder += t;
-                }
-            }
             double imageWidth = cell.getWidthMm() - cell.getMarginLeftMm() - cell.getMarginRightMm() - hBorder;
             double imageHeight = cell.getHeightMm() - cell.getMarginTopMm() - cell.getMarginBottomMm() - vBorder;
             externalGraphic.setWidthMm(imageWidth);
             externalGraphic.setHeightMm(imageHeight);
             if (cell.getCellType() == EReportCellType.DB_IMAGE) {
-
+                AdsReportDbImageCell dbImageCell = (AdsReportDbImageCell) cell;
+                String mimeType = dbImageCell.getMimeType();           
+                
                 externalGraphic.setContentWidth(String.valueOf(imageWidth) + "mm");
                 externalGraphic.setContentHeight(String.valueOf(imageHeight) + "mm");
-                if (((AdsReportDbImageCell) cell).getScaleType() == EImageScaleType.FIT_TO_CONTAINER || ((AdsReportDbImageCell) cell).getScaleType() == EImageScaleType.CROP || ((AdsReportDbImageCell) cell).getScaleType() == EImageScaleType.RESIZE_CONTAINER) {
+                        
+                if (dbImageCell.getScaleType() == EImageScaleType.FIT_TO_CONTAINER || dbImageCell.getScaleType() == EImageScaleType.CROP || dbImageCell.getScaleType() == EImageScaleType.RESIZE_CONTAINER) {
                     externalGraphic.setVerticalAlign(cell.getVAlign());
                     externalGraphic.setHorizontalAlign(cell.getHAlign());
                     externalGraphic.writeAttribute("padding", "0mm");
                     externalGraphic.writeAttribute("margin", "0mm");
+                    if (mimeType != null && mimeType.contains("/svg")) {
+                        externalGraphic.setScaling(FoExternalGraphic.SCALING_UNIFORM);
+                    }
                 } else {
                     externalGraphic.setVerticalAlign(EReportCellVAlign.MIDDLE);
                     externalGraphic.setHorizontalAlign(EReportCellHAlign.CENTER);
+                    if (mimeType != null && mimeType.contains("/svg")) {
+                        externalGraphic.setScaling(FoExternalGraphic.SCALING_NONUNIFORM);
+                    }
                 }
 
             } else {
@@ -254,14 +289,17 @@ public class FoReportGenerator extends AbstractReportGenerator {
             block.end();
         } else {
             boolean isJustify = cell.getHAlign() == EReportCellHAlign.JUSTIFY;
-            cellBlockContainer = createCellContainer(cell, bandBlockContainer, cell.getHeightMm(), cellTopMm + getCurHeightMm(), marginMm, CellWrappingState.NO_WRAPPED/*wrapping && cell.getTopMm()==0 ? CellWrappingState.LAST_PART_WRAPPED_CELL:CellWrappingState.NO_WRAPPED*/);
-            for (int i = 0; i < adjustedCell.getLineCount(); i++) {
-                addLine(cellBlockContainer, adjustedCell, i, isJustify, cell.getLineSpacingMm());
+            cellBlockContainer = createCellContainer(cell, bandBlockContainer, cell.getHeightMm(), cellTopMm + getCurHeightMm(), marginMm, calcCellTopBorder(cell, adjustedCell), CellWrappingState.NO_WRAPPED/*wrapping && cell.getTopMm()==0 ? CellWrappingState.LAST_PART_WRAPPED_CELL:CellWrappingState.NO_WRAPPED*/, 
+                    currentGenData);
+            for (CellParagraph cellParagraph : adjustedCell) {
+                for (int i = 0; i < cellParagraph.getLinesCount(); i++) {
+                    addLine(cellBlockContainer, adjustedCell, cellParagraph, i, isJustify, cell.getLineSpacingMm(),cell.getMarginLeftMm(),cell.getMarginRightMm());
+                }
             }
             if (isDataBand(band)) {
                 lastBandPartHeight = cellTopMm + cell.getHeightMm();
             }
-            if (cellBlockContainer != null && adjustedCell.getLineCount() == 0) {
+            if (cellBlockContainer != null && adjustedCell.getParagraphsCount() == 0) {
                 cellBlockContainer.addEmptyBlock(); // for xml validation
             }
         }
@@ -271,17 +309,22 @@ public class FoReportGenerator extends AbstractReportGenerator {
         }
         return true;
     }
-
-    private void addLine(FoBlockContainer cellBlockContainer, AdjustedCell adjustedCell, int line, boolean isJustify, double lineSpasing) throws XMLStreamException {
-        FoBlockContainer lineBlockContainer = cellBlockContainer.addNewBlockContainer();
+    
+    private void addLine(FoBlockContainer cellBlockContainer, AdjustedCell adjustedCell, CellParagraph paragraph, int line, boolean isJustify, double lineSpasing,double marginLeft,double marginRight) throws XMLStreamException, ReportGenerationException {
+        FoBlockContainer lineBlockContainer = cellBlockContainer.addNewBlockContainer();        
         lineBlockContainer.begin();
-        lineBlockContainer.setHeight(adjustedCell.getLineFontSize(line) + lineSpasing);
-     //   lineBlockContainer.setArabic(true);
-        FoBlock lineBlock = addBlockToBlockContainer(lineBlockContainer, isJustify && line == adjustedCell.getLineCount() - 1);
+        lineBlockContainer.setLineHeight(adjustedCell.getLineHeight(paragraph, line, lineSpasing));       
+      
+        FoBlock lineBlock = addBlockToBlockContainer(lineBlockContainer, isJustify && paragraph.isLastLineInParagraph(line));
+        
+        lineBlock.setLeftMargin(marginLeft);
+        lineBlock.setRightMargin(marginRight);
+        
         if (isJustify) {
             lineBlock.setTextJustify();
         }
-        List<CellContents> contents = adjustedCell.getContentsByLine(line);
+        
+        List<CellContents> contents = paragraph.getContentsByLine(line);
         for (int j = 0; j < contents.size(); j++) {
             CellContents c = contents.get(j);
             addInLineToBlock(c, lineBlock);
@@ -294,41 +337,57 @@ public class FoReportGenerator extends AbstractReportGenerator {
         return band != null && band.getType() != EReportBandType.PAGE_HEADER && band.getType() != EReportBandType.PAGE_FOOTER;
     }
 
-    private double calcCellMargin(final AdsReportCell cell, boolean wrapping) {
+    private double calcCellTopMargin(final AdsReportCell cell, boolean wrapping) {
         if (wrapping) {
             return 0;
         } else {
             return cell.getMarginTopMm();
         }
     }
-
-    private double[] calcLinesOnCurPage(final AdsReportCell cell, final AdjustedCell adjustedCell, final double textTopMm, final double wrappedLine) {
-        return isImage(cell) ? new double[]{0, cell.getHeightMm()} : calcLinesOnCurPage(adjustedCell, textTopMm, cell.getLineSpacingMm(), wrappedLine);
+    
+    private double[] calcLinesOnCurPage(final AdsReportCell cell, final AdjustedCell adjustedCell, final double textTopMm, final double textBottomMm, final double wrappedLine) {
+        return isImage(cell) ? new double[]{0, 0, cell.getHeightMm()} : calcLinesOnCurPage(adjustedCell, textTopMm, textBottomMm, cell.getLineSpacingMm(), wrappedLine);
     }
 
-    private double[] calcLinesOnCurPage(final AdjustedCell adjustedCell, final double textTopMm, double lineSpasing, final double wrappedLine) {
-        int i, end = adjustedCell.getLineCount();
+    /**
+     * 
+     * @param adjustedCell
+     * @param textTopMm
+     * @param lineSpasing
+     * @param wrappedLine
+     * @return array with the following information.
+     *          [0] - last paragraph number on the current page
+     *          [1] - last line in the paragraph on the current page
+     *          [2] - resulting height
+     */
+    private double[] calcLinesOnCurPage(final AdjustedCell adjustedCell, final double textTopMm, final double textBottomMm, final  double lineSpasing, final double wrappedLine) {
+        int i = 0, p;
         double lineHeigh;
         double heigh = 0;
-        for (i = 0; i < end; i++) {
-            lineHeigh = adjustedCell.getLineFontSize(i) + lineSpasing;
-            heigh += lineHeigh;
-            if ((heigh + textTopMm) > wrappedLine) {
-                heigh = heigh - lineHeigh;//-lineSpasing;
+        int paragraphsCount = adjustedCell.getParagraphsCount();
+        double outerWidth = textTopMm;
+        for (p = 0; p < paragraphsCount; p++) {
+            CellParagraph paragraph = adjustedCell.getParagraph(p);
+            boolean adjusted = false;
+            int lineCount = paragraph.getLinesCount();
+            for (i = 0; i < lineCount; i++) {
+                lineHeigh = adjustedCell.getLineHeight(paragraph, i, lineSpasing);
+                heigh += lineHeigh;
+                //for last line in cell
+                if ((p == (paragraphsCount - 1)) && (i == (lineCount - 1))) {
+                    outerWidth += textBottomMm;
+                }
+                if ((heigh + outerWidth) > wrappedLine) {
+                    heigh = heigh - lineHeigh;//-lineSpasing;
+                    adjusted = true;
+                    break;
+                }
+            }
+            if (adjusted) {
                 break;
             }
         }
-        return new double[]{i, heigh};
-    }
-
-    private double calcContentHeight(final AdjustedCell adjustedCell, double lineSpasing) {
-        int end = adjustedCell.getLineCount();
-        double heigh = 0, lineHeigh;
-        for (int i = 0; i < end; i++) {
-            lineHeigh = adjustedCell.getLineFontSize(i) + lineSpasing;
-            heigh += lineHeigh;
-        }
-        return heigh - lineSpasing;
+        return new double[]{p >= paragraphsCount ? p-1 : p, i, heigh};
     }
 
     private FoBlock addBlockToBlockContainer(FoBlockContainer cellBlockContainer, boolean isLastCellJustify) throws XMLStreamException {
@@ -356,10 +415,12 @@ public class FoReportGenerator extends AbstractReportGenerator {
         return false;
     }
 
-    private void addInLineToBlock(CellContents c, FoBlock block) throws XMLStreamException {
+    private void addInLineToBlock(CellContents c, FoBlock block) throws XMLStreamException, ReportGenerationException {
         FoInline inlineForTextDecoration = null;
         final FoInline inline = block.addNewInline();
-        inline.begin();
+        inline.begin();       
+//        inline.setBackgroundColor("#00FF00");
+//        inline.setMargin(0);
         if (c.getBgColor() != null) {
             String bgColor = color2FoColor(c.getBgColor());
             inline.setBackgroundColor(bgColor);
@@ -369,6 +430,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
             inline.setColor(fgColor);
         }
         if (c.getFont() != null) {
+            org.apache.fop.fonts.Font fopFont = CellsAdjuster.lookupFopFont(c.getFont());
             inline.setFontFamily(c.getFont().getName());
             inline.setFontSize(c.getFont().getSizeMm());
             if (c.getFont().getItalic()) {
@@ -394,7 +456,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
             }
         }
         if (c.getText() != null) {
-            String text = c.getText();            
+            String text = c.getText();
             if (inlineForTextDecoration != null) {
                 inlineForTextDecoration.setText(text);
                 inlineForTextDecoration.end();
@@ -428,17 +490,25 @@ public class FoReportGenerator extends AbstractReportGenerator {
     }
 
     @Override
-    protected void viewBand(final List<ReportGenData> genDataList, final AdsReportBand band, Map<AdsReportCell, AdjustedCell> adjustedCellContents) throws ReportGenerationException {
+    protected void viewBand(List<ReportGenData> genDataList, AdsReportBand band, Map<AdsReportCell, AdjustedCell> adjustedCellContents, ReportGenData currentGenData) throws ReportGenerationException {
         try {
             //drawnBandHeight=0;
+            bandNumber++;
             double height = isBandGoIntoPage(band) ? band.getHeightMm() : (getPageHeight() - getCurHeightMm());
             List<AdsReportCell> widgetList = getCells(band);
-            FoBlockContainer bandBlockContainer = createBandContainer(band, height);
-            viewCells(band, bandBlockContainer, widgetList, adjustedCellContents, genDataList);
-            if (drawnBandHeight > 0) {
-                band.setHeightMm(band.getHeightMm() - drawnBandHeight);
+            FoBlockContainer bandBlockContainer = createBandContainer(band, height, currentGenData);
+            ZebraStripingInfo info = ranges.get(band);
+            if (info != null && drawnBand != band) {
+                    info.nextCorrection();
             }
-            drawnBandHeight = 0;
+            viewCells(band, bandBlockContainer, widgetList, adjustedCellContents, genDataList, currentGenData);
+            if (drawnBand == band){
+                if (drawnBandHeight > 0) {
+                    band.setHeightMm(band.getHeightMm()  - drawnBandHeight);
+                }
+                drawnBandHeight = 0;
+                drawnBand = null;
+            }
             bandBlockContainer.end();
         } catch (XMLStreamException ex) {
             throw new ReportGenerationException(ex);
@@ -470,10 +540,15 @@ public class FoReportGenerator extends AbstractReportGenerator {
         return snappedCells;
     }
 
-    private void viewCells(final AdsReportBand band, FoBlockContainer bandBlockContainer, List<AdsReportCell> widgetList, Map<AdsReportCell, AdjustedCell> adjustedCellContents, final List<ReportGenData> genDataList) throws XMLStreamException, ReportGenerationException {
+    private void viewCells(final AdsReportBand band, FoBlockContainer bandBlockContainer, List<AdsReportCell> widgetList, Map<AdsReportCell, AdjustedCell> adjustedCellContents, final List<ReportGenData> genDataList, ReportGenData currentGenData) throws XMLStreamException, ReportGenerationException {
         boolean someCellDisplayed = false;
         drawnBandHeightOnCurPage = Double.MAX_VALUE;
-        double d = drawnBandHeight;
+        double d;
+        if (drawnBand == band){
+            d = drawnBandHeight;
+        } else {
+            d = 0; 
+        }
         List<AdsReportCell> cellsForNextPage = new LinkedList<>();
         List<AdsReportCell> wrappedCells = new LinkedList<>();
         while (!widgetList.isEmpty()) {
@@ -495,7 +570,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
             if (!isNewPageRequired) {
                 upperCell.setTopMm(cellTopMm);
                 AdjustedCell adjustedCell = adjustedCellContents.get(upperCell);
-                if (viewCell(upperCell, adjustedCell, band, bandBlockContainer/*,falseadjustedCell.wasWrapped(),isNewPageRequired*/)) {
+                if (viewCell(upperCell, adjustedCell, band, bandBlockContainer/*,falseadjustedCell.wasWrapped(),isNewPageRequired*/, currentGenData)) {
                     someCellDisplayed = true;
                 }
             } else {
@@ -542,7 +617,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
             }
         }
         if (!wrappedCells.isEmpty()) {
-            wrapCells(bandBlockContainer, adjustedCellContents, wrappedCells, cellsForNextPage, d);
+            wrapCells(bandBlockContainer, adjustedCellContents, wrappedCells, cellsForNextPage, d, currentGenData);
             someCellDisplayed = true;
         }
         if (!someCellDisplayed) {
@@ -554,14 +629,14 @@ public class FoReportGenerator extends AbstractReportGenerator {
             if (bandBlockContainer != null) {
                 bandBlockContainer.end();
             }
-            viewOnNewPage(band, genDataList, adjustedCellContents, cellsForNextPage);
+            viewOnNewPage(band, genDataList, adjustedCellContents, cellsForNextPage, currentGenData);
         }
         someBandOnPageDisplayed = true;
     }
 
-    private void wrapCells(FoBlockContainer bandBlockContainer, final Map<AdsReportCell, AdjustedCell> adjustedCellContents, final List<AdsReportCell> wrappedCells, final List<AdsReportCell> cellsForNextPage, double d) throws XMLStreamException, ReportGenerationException {
+    private void wrapCells(FoBlockContainer bandBlockContainer, final Map<AdsReportCell, AdjustedCell> adjustedCellContents, final List<AdsReportCell> wrappedCells, final List<AdsReportCell> cellsForNextPage, double d, ReportGenData currentGenData) throws XMLStreamException, ReportGenerationException {
         List<AdsReportCell> cellsWrappenonNextPage = new LinkedList<>();
-        cellsWrappenonNextPage.addAll(viewWrappedCells(bandBlockContainer, adjustedCellContents, wrappedCells, d));
+        cellsWrappenonNextPage.addAll(viewWrappedCells(bandBlockContainer, adjustedCellContents, wrappedCells, d, currentGenData));
         if (delta != 0) {
             for (AdsReportCell c : cellsForNextPage) {
                 c.setTopMm(c.getTopMm() + delta);
@@ -570,22 +645,24 @@ public class FoReportGenerator extends AbstractReportGenerator {
         cellsForNextPage.addAll(0, cellsWrappenonNextPage);
     }
 
-    private void viewOnNewPage(final AdsReportBand band, final List<ReportGenData> genDataList, Map<AdsReportCell, AdjustedCell> adjustedCellContents, List<AdsReportCell> cellsForNextPage) throws ReportGenerationException, XMLStreamException {
+    private void viewOnNewPage(final AdsReportBand band, final List<ReportGenData> genDataList, Map<AdsReportCell, AdjustedCell> adjustedCellContents, List<AdsReportCell> cellsForNextPage, ReportGenData currentGenData) throws ReportGenerationException, XMLStreamException {
         double d = drawnBandHeight;
+        int num = bandNumber % 2;
         finishPage(genDataList);
         newPage(genDataList);
-
+        bandNumber = num;
         drawnBandHeight = d;
+        drawnBand = band;
         double bandHeight = band.getHeightMm() - drawnBandHeight;
         bandHeight = (getCurHeightMm() + bandHeight > getPageHeight())
                 ? (getPageHeight() - getCurHeightMm()) : bandHeight;
-        FoBlockContainer bandBlockContainer = createBandContainer(band, bandHeight);
-        viewCells(band, bandBlockContainer, cellsForNextPage, adjustedCellContents, genDataList);
+        FoBlockContainer bandBlockContainer = createBandContainer(band, bandHeight, currentGenData);
+        viewCells(band, bandBlockContainer, cellsForNextPage, adjustedCellContents, genDataList, currentGenData);
     }
 
     private double delta = 0.0;
 
-    private List<AdsReportCell> viewWrappedCells(FoBlockContainer bandBlockContainer, final Map<AdsReportCell, AdjustedCell> adjustedCellContents, final List<AdsReportCell> wrappedCells, double d) throws XMLStreamException, ReportGenerationException {
+    private List<AdsReportCell> viewWrappedCells(FoBlockContainer bandBlockContainer, final Map<AdsReportCell, AdjustedCell> adjustedCellContents, final List<AdsReportCell> wrappedCells, double d, ReportGenData currentGenData) throws XMLStreamException, ReportGenerationException {
         List<AdsReportCell> cellsForNextPage = new ArrayList<>();
         double[] wrapLines = calcWrapLines(adjustedCellContents, wrappedCells, d);
         double wrappedLine = wrapLines[1];
@@ -597,52 +674,88 @@ public class FoReportGenerator extends AbstractReportGenerator {
             double cellTopMm = cell.getTopMm() <= 0 ? cell.getTopMm() : cell.getTopMm() - d;
             if (getPageHeight() > (cellTopMm + getCurHeightMm())) {
                 AdjustedCell adjustedCell = adjustedCellContents.get(cell);
-                int lineCount = isImage(cell) ? 0 : adjustedCell.getLineCount();
-                double marginMm = calcCellMargin(cell, adjustedCell.wasSeparated());
-                double textTopMm = marginMm/*cell.getMarginTopMm()*/ + cellTopMm;
+                int paragraphsCount = isImage(cell) ? 0 : adjustedCell.getParagraphsCount();
+                
+                double marginMm = calcCellTopMargin(cell, adjustedCell.wasSeparated());
+                double topBorderThickness = 0;
+                double textBottomMm = cell.getMarginBottomMm();
+                Border border = cell.getBorder();
+                if (border != null) {
+                    border = border.copy(false);
+                    if (adjustedCell.wasSeparated()) {
+                        border.setOnTop(false);
+                    } else {
+                        topBorderThickness += border.getOnTop()? border.getTopThicknessMm(): 0;
+                    }
+                    textBottomMm += border.getOnBottom()? border.getBottomThicknessMm(): 0;
+                }
+                double textTopMm = marginMm/*cell.getMarginTopMm()*/ + cellTopMm + topBorderThickness;
 
-                double[] linesInfo = calcLinesOnCurPage(cell, adjustedCell, textTopMm, wrappedLine); //???-?? ????? ?? ??????? ??????, ??????? ?????????? ?? ??????? ????????                  
-                int lineCntOnCurPage = (int) linesInfo[0];
+                double[] linesInfo = calcLinesOnCurPage(cell, adjustedCell, textTopMm, 0, wrappedLine); //???-?? ????? ?? ??????? ??????, ??????? ?????????? ?? ??????? ????????                  
+                int paragraphCntOnCurPage = (int) linesInfo[0];
+                int lineCntOnCurPage = (int) linesInfo[1];
+                CellParagraph cellParagraph = adjustedCell.getParagraphsCount() > 0 ? adjustedCell.getParagraph(paragraphCntOnCurPage) : null;
+                int lineCount = cellParagraph == null ? 0 : cellParagraph.getLinesCount();
+                boolean isTransfer = isTransfer(adjustedCell, paragraphCntOnCurPage, lineCntOnCurPage);
                 double cellDisplayHeightMm = wrappedLine - cellTopMm;
-                double cellActualHeightMm = lineCntOnCurPage > 0 && lineCntOnCurPage < lineCount ? linesInfo[1] + marginMm/*calcCellMargin(cell, adjustedCell.wasWrapped())*/ : cellDisplayHeightMm;
-                double addHeight = (lineCntOnCurPage > 0 && lineCntOnCurPage < lineCount)
-                        || (lineCntOnCurPage == lineCount && (cellActualHeightMm + cellTopMm) == wrappedLine) ? (cellActualHeightMm + cellTopMm) - minWrappedLine : 0;
+                double cellActualHeightMm = isTransfer ? linesInfo[2] + marginMm/*calcCellMargin(cell, adjustedCell.wasWrapped())*/ : cellDisplayHeightMm;
+                double addHeight = (isTransfer)
+                        || (paragraphCntOnCurPage == paragraphsCount && lineCntOnCurPage == lineCount && (cellActualHeightMm + cellTopMm) == wrappedLine) ? (cellActualHeightMm + cellTopMm) - minWrappedLine : 0;
 
                 FoBlockContainer cellBlockContainer = null;
                 /*double q=0.0;
                  if(hasBottomBorder(cell) && (cell.getHeightMm()-cellHeightMm)>0){//for bottom border
                  q=1.0;
                  } */
-                if (lineCntOnCurPage > 0) {  //view cell                      
-                    cellBlockContainer = createCellContainer(cell, bandBlockContainer, cellDisplayHeightMm/*+q*/, cellTopMm + getCurHeightMm(), marginMm, CellWrappingState.NO_WRAPPED /* adjustedCell.wasWrapped() &&  cell.getTopMm()==0 ? CellWrappingState.MIDDLE_PART_WRAPPED_CELL : CellWrappingState.FIRST_PART_WRAPPED_CELL*/);
+                if (border != null) {
+                    border.setOnBottom(false);
+                }
+                if (paragraphCntOnCurPage > 0 || lineCntOnCurPage > 0) {  //view cell 
+                    cellBlockContainer = createCellContainer(cell, bandBlockContainer, cellDisplayHeightMm/*+q*/, cellTopMm + getCurHeightMm(), marginMm, border, true, CellWrappingState.NO_WRAPPED /* adjustedCell.wasWrapped() &&  cell.getTopMm()==0 ? CellWrappingState.MIDDLE_PART_WRAPPED_CELL : CellWrappingState.FIRST_PART_WRAPPED_CELL*/,
+                            currentGenData);
                     boolean isJustify = cell.getHAlign() == EReportCellHAlign.JUSTIFY;
-                    for (int i = 0; i < lineCntOnCurPage; i++) {
-                        addLine(cellBlockContainer, adjustedCell, i, isJustify, cell.getLineSpacingMm());
+                    for (int i = 0; i <= paragraphCntOnCurPage; i++) {
+                        CellParagraph paragraph = adjustedCell.getParagraph(i);
+                        int size = paragraph.getLinesCount();
+                        if (i == paragraphCntOnCurPage) {
+                            size = lineCntOnCurPage;
+                        }
+                        for (int j = 0; j < size; j++) {
+                            addLine(cellBlockContainer, adjustedCell, paragraph, j, isJustify, cell.getLineSpacingMm(),cell.getMarginLeftMm(),cell.getMarginRightMm());
+                        }
                     }
                 } else {
                     if (cellDisplayHeightMm == 0) {//lineCount>0 && lineCntOnCurPage==0 && cellDisplayHeightMm<(adjustedCell.getLineFontSize(0)+cell.getLineSpacingMm()+cell.getMarginTopMm())){
                         bandBlockContainer.addEmptyBlock();
                     } else {
-                        cellBlockContainer = createCellContainer(cell, bandBlockContainer, cellDisplayHeightMm/*+q*/, cellTopMm + getCurHeightMm(), marginMm, CellWrappingState.NO_WRAPPED /* adjustedCell.wasWrapped() && cell.getTopMm()==0 ? CellWrappingState.MIDDLE_PART_WRAPPED_CELL : CellWrappingState.FIRST_PART_WRAPPED_CELL*/);
+                        cellBlockContainer = createCellContainer(cell, bandBlockContainer, cellDisplayHeightMm/*+q*/, cellTopMm + getCurHeightMm(), marginMm, border, CellWrappingState.NO_WRAPPED /* adjustedCell.wasWrapped() && cell.getTopMm()==0 ? CellWrappingState.MIDDLE_PART_WRAPPED_CELL : CellWrappingState.FIRST_PART_WRAPPED_CELL*/,
+                                currentGenData);
                     }
                 }
                 adjustedCell.setWasWrapped(true);
-                adjustedCell.setWasSeparated(cellActualHeightMm > 0);
-                if (lineCntOnCurPage < lineCount) {   //calc wrapped part
+                adjustedCell.setWasSeparated(cellActualHeightMm > 0 || isTransfer);
+                if (isTransfer) {   //calc wrapped part
                     if (!isHeightCalc) {
                         isHeightCalc = true;
                         drawnBandHeightOnCurPage = cellTopMm + cellDisplayHeightMm /*+ getRootForm().getMargin().getTopMm()*/;
                     }
-                    if (cellBlockContainer != null && lineCntOnCurPage > 0) {//???? ??????????? ?????? ?? ??????? ??????,?? ????????? ????-????????? ??????
-                        for (int i = 0; i < lineCntOnCurPage; i++) {
-                            adjustedCell.getLineCellContents().remove(0);
+                    if (cellBlockContainer != null && (paragraphCntOnCurPage > 0 || lineCntOnCurPage > 0)) {//???? ??????????? ?????? ?? ??????? ??????,?? ????????? ????-????????? ??????
+                        int size = lineCntOnCurPage == lineCount ? paragraphCntOnCurPage + 1 : paragraphCntOnCurPage;
+                        for (int i = 0; i < size; i++) {
+                            adjustedCell.removeFirst();
+                        }
+                        if (cellParagraph != null){
+                            for (int i = 0; i < lineCntOnCurPage; i++) {
+                                cellParagraph.removeFirst();
+                            }
                         }
                         cell.setTopMm(0);
                         //cell.setMarginTopMm(0);
                         cell.setHeightMm(cell.getHeightMm() - cellActualHeightMm + addHeight);
                     } else {
+                        adjustedCell.setWasSeparated(false);
                         cell.setTopMm(0);
-                        marginMm = marginMm/*cell.getMarginTopMm()*/ - cellActualHeightMm;
+//                        marginMm = marginMm/*cell.getMarginTopMm()*/ - cellActualHeightMm;
                         cell.setMarginTopMm(marginMm < 0 ? 0 : marginMm);
                         cell.setHeightMm(cell.getHeightMm() - cellActualHeightMm + addHeight);
                     }
@@ -653,7 +766,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
                         drawnBandHeightOnCurPage = cellTopMm + cellDisplayHeightMm /*+ getRootForm().getMargin().getTopMm()*/;
                     }
                     if (!isImage(cell)) {
-                        adjustedCell.getLineCellContents().clear();
+                        adjustedCell.clear();
                         cell.setTopMm(0);
                         cell.setHeightMm(cell.getHeightMm() - cellActualHeightMm + addHeight);
                         cellsForNextPage.add(cell);
@@ -691,19 +804,27 @@ public class FoReportGenerator extends AbstractReportGenerator {
             if (getPageHeight() > (topMm + getCurHeightMm())) {
                 AdjustedCell adjustedCell = adjustedCellContents.get(cell);
                 //double topMm = cell.getTopMm() == 0 ? 0 : cell.getTopMm() - d;
-                double marginMm = calcCellMargin(cell, adjustedCell.wasSeparated());
+                double marginMm = calcCellTopMargin(cell, adjustedCell.wasSeparated());
+                double textBottomMm = cell.getMarginBottomMm();
+                Border border = cell.getBorder();
+                if (border != null) {
+                    marginMm += border.getOnTop()? border.getTopThicknessMm(): 0;
+                    textBottomMm += border.getOnBottom()? border.getBottomThicknessMm(): 0;
+                }
                 double textTopMm = marginMm/*cell.getMarginTopMm()*/ + topMm;
                 double pageHeight = getPageHeight() - getCurHeightMm();
-                double[] linesInfo = calcLinesOnCurPage(cell, adjustedCell, textTopMm, pageHeight);
-                if (linesInfo[0] > 0) {
+                double[] linesInfo = calcLinesOnCurPage(cell, adjustedCell, textTopMm, textBottomMm, pageHeight);
+                if (linesInfo[0] > 0 || (linesInfo[0] == 0 && linesInfo[1] > 0)) {
                     if (cell.isAdjustHeight()) {
-                        double cellContentHeigh = linesInfo[1] + marginMm/*calcCellMargin(cell, adjustedCell.wasWrapped())*/;
+                        double cellContentHeigh = linesInfo[2] + marginMm/*calcCellMargin(cell, adjustedCell.wasWrapped())*/;
                         double bottomMm = cellContentHeigh + topMm;
                         if ((bottomMm > wrappedLine)) {
                             wrappedLine = bottomMm;
                         }
-                        double contentHeight = calcContentHeight(adjustedCell, cell.getLineSpacingMm()) + marginMm/* cell.getMarginTopMm()*/ + cell.getMarginBottomMm();
-                        if (bottomMm < minWrappedLine && linesInfo[0] < adjustedCell.getLineCount() && contentHeight == cell.getHeightMm()) {
+                        double contentHeight = adjustedCell.getContentHeight(cell.getLineSpacingMm()) + marginMm/* cell.getMarginTopMm()*/ + cell.getMarginBottomMm();
+                        if (bottomMm < minWrappedLine && 
+                                isTransfer(adjustedCell, (int) linesInfo[0], (int) linesInfo[1])
+                                && contentHeight == cell.getHeightMm()) {
                             minWrappedLine = bottomMm;
                         }
                     } else {
@@ -715,7 +836,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
                             iconHeight = topMm + cell.getHeightMm();
                         }
                     } else if (textTopMm < pageHeight) {
-                        if ((adjustedCell.getLineCount() != 0) && (textTopMm > wrappedLine)) {
+                        if ((adjustedCell.getParagraphsCount() != 0) && (textTopMm > wrappedLine)) {
                             wrappedLine = textTopMm;
                         }
                     }
@@ -736,6 +857,14 @@ public class FoReportGenerator extends AbstractReportGenerator {
         minWrappedLine = minWrappedLine == Double.MAX_VALUE ? wrappedLine : minWrappedLine;
         return new double[]{minWrappedLine, wrappedLine};
     }
+    
+    private boolean isTransfer(AdjustedCell adjustedCell, int paragraphCntOnCurPage, int lineCntOnCurPage) {
+        int paragraphsCount = adjustedCell.getParagraphsCount();
+        CellParagraph cellParagraph = paragraphsCount > 0 ? adjustedCell.getParagraph(paragraphCntOnCurPage) : null;
+        int lineCount = cellParagraph == null ? 0 : cellParagraph.getLinesCount();
+        return paragraphsCount > 0 && 
+                        (paragraphCntOnCurPage < (paragraphsCount - 1) || paragraphCntOnCurPage == (paragraphsCount - 1) && lineCntOnCurPage < lineCount);
+    }
 
     private boolean isImage(AdsReportCell cell) {
         return (cell.getCellType() == EReportCellType.IMAGE || cell.getCellType() == EReportCellType.DB_IMAGE || cell.getCellType() == EReportCellType.CHART);
@@ -754,7 +883,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
         return widgetList;
     }
 
-    private FoBlockContainer createBandContainer(final AdsReportBand band, final double height) throws XMLStreamException {
+    private FoBlockContainer createBandContainer(final AdsReportBand band, final double height, ReportGenData currentGenData) throws XMLStreamException {
         final FoBlockContainer bandBlockContainer = flow.addNewBlockContainer();
         bandBlockContainer.begin();
 
@@ -762,86 +891,95 @@ public class FoReportGenerator extends AbstractReportGenerator {
         final String bandFgColor = (band.isFgColorInherited() ? null : color2FoColor(band.getFgColor()));
 
         final AdsReportForm rootForm = getRootForm();
+        double leftMm = rootForm.getMargin().getLeftMm();
+        double rightMm = rootForm.getMargin().getRightMm();
+        if (currentGenData instanceof SubReportGenData){
+            SubReportGenData genData = (SubReportGenData) currentGenData;
+            leftMm = genData.getMargin().getLeftMm();
+            rightMm = genData.getMargin().getRightMm();
+        }
         setBlockContainerParams(bandBlockContainer,
-                rootForm.getMargin().getLeftMm(),
-                getCurHeightMm(),
-                rootForm.getPageWidthMm() - rootForm.getMargin().getLeftMm() - rootForm.getMargin().getRightMm(),
-                height,
-                bandBgColor,
-                bandFgColor,
-                band.getBorder(),
-                band.getFont(), CellWrappingState.NO_WRAPPED);
+                    leftMm,
+                    getCurHeightMm(),
+                    rootForm.getPageWidthMm() - leftMm - rightMm,
+                    height,
+                    bandBgColor,
+                    bandFgColor,
+                    band.getBorder(),
+                    band.getFont(), CellWrappingState.NO_WRAPPED);
         //boolean someCellDisplayed = false;
         return bandBlockContainer;
     }
-    private final List<Double> ranges = new LinkedList<>();
-    private int correction = 1;
+    private final Map<AdsReportBand, ZebraStripingInfo> ranges = new HashMap<>();
+    private int bandNumber = 0;
 
     @Override
     protected void newPage(List<ReportGenData> genDataList) throws ReportGenerationException {
         super.newPage(genDataList);
         cleanupRanges();
+        bandNumber = 0;
     }
 
     private void cleanupRanges() {
-        correction = ranges.size() % 2 == 0 ? 1 : 2;
-        ranges.clear();
-    }
-
-    private int getLogicalRowIndexByCellTop(double top) {
-        if (ranges.isEmpty()) {
-            ranges.add(top);
-            return correction;
-        } else {
-            for (int i = ranges.size() - 1; i >= 0; i--) {
-                double height = ranges.get(i);
-                if (top > height) {
-                    if (i == ranges.size() - 1) {
-                        ranges.add(top);
-                        return ranges.size() + correction - 1;
-                    } else {//we will not change any settings and just return index of match +1
-                        return i + correction;
-                    }
-                } else if (top == height) {
-                    return i + correction;
-                }
-            }
-            return correction;
+        for (AdsReportBand band : ranges.keySet()){
+            ZebraStripingInfo info = ranges.get(band);
+            info.cleanupRanges();
         }
     }
-
-    private FoBlockContainer createCellContainer(final AdsReportCell cell, FoBlockContainer bandBlockContainer, double height, double top, double topMargin, CellWrappingState wrappingState) throws XMLStreamException {
+    
+    private String getColor(final AdsReportCell cell, double top, boolean storeColor){
+        Color zebraColor = cell.getAltBgColor();
+        boolean ignoreZebra = zebraColor == null;
+        
+        if (!ignoreZebra) {
+            AdsReportBand band = cell.getOwnerBand();
+            ZebraStripingInfo info = ranges.get(band);
+            if (info == null) {
+                info = new ZebraStripingInfo();
+                ranges.put(band, info);
+            }
+            if (info.getLogicalRowIndexByCellTop(cell, top, band.isInsideAltColor(), storeColor) % 2 == 0) {
+                return XmlColor.mergeColor(zebraColor);
+            }
+        }
+        return cell.isBgColorInherited() ? null : color2FoColor(cell.getBgColor());
+    }
+    
+    private FoBlockContainer createCellContainer(final AdsReportCell cell, FoBlockContainer bandBlockContainer, double height, double top, double topMargin, Border border, CellWrappingState wrappingState, ReportGenData currentGenData) throws XMLStreamException {
+        return createCellContainer(cell, bandBlockContainer, height, top, topMargin, border, false, wrappingState, currentGenData);
+    }
+    
+    private FoBlockContainer createCellContainer(final AdsReportCell cell, FoBlockContainer bandBlockContainer, double height, double top, double topMargin, Border border, boolean storeColor, CellWrappingState wrappingState, ReportGenData currentGenData) throws XMLStreamException {
         final FoBlockContainer cellBlockContainer = bandBlockContainer.addNewBlockContainer();
         cellBlockContainer.begin();
 
-        final String cellBgColor;
-        Color zebraColor = cell.getAltBgColor();
-        boolean ignoreZebra = zebraColor == null;
-
-        if (!ignoreZebra && getLogicalRowIndexByCellTop(top) % 2 == 0) {
-            cellBgColor = XmlColor.mergeColor(zebraColor);
-        } else {
-            cellBgColor = cell.isBgColorInherited() ? null : color2FoColor(cell.getBgColor());
-        }
-
+        final String cellBgColor = getColor(cell, top, storeColor);
+        
         final String cellFgColor = cell.isFgColorInherited() ? null : color2FoColor(cell.getFgColor());
 
         final AdsReportForm rootForm = getRootForm();
+        double leftMm = rootForm.getMargin().getLeftMm();
+        double rightMm = rootForm.getMargin().getRightMm();
+        if (currentGenData instanceof SubReportGenData){
+            SubReportGenData genData = (SubReportGenData) currentGenData;
+            leftMm = genData.getMargin().getLeftMm();
+            rightMm = genData.getMargin().getRightMm();
+        }
 
         setBlockContainerParams(cellBlockContainer,
-                cell.getLeftMm() + rootForm.getMargin().getLeftMm(),
+                cell.getLeftMm() + leftMm,
                 top,
                 cell.getWidthMm(),
                 height,
                 cellBgColor,
                 cellFgColor,
-                cell.getBorder(),
+                border,
                 cell.getFont(),
                 wrappingState);
 
         //cellBlockContainer.setMargin(cell.getMarginMm()); 
-        cellBlockContainer.setLeftMargin(cell.getMarginLeftMm());
-        cellBlockContainer.setRightMargin(cell.getMarginRightMm());
+//        cellBlockContainer.setLeftMargin(cell.getMarginLeftMm());
+//        cellBlockContainer.setRightMargin(cell.getMarginRightMm());
 
         //final Font cellFont = cell.getFont();
         //cellBlockContainer.setLineHeight(cellFont.getSizeMm()+cell.getLineSpacingMm());
@@ -982,7 +1120,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
             } else {
                 result = Math.max(cellBottomPos, result);
             }
-        }
+        }        
         return result;
     }
 
@@ -998,7 +1136,18 @@ public class FoReportGenerator extends AbstractReportGenerator {
         if (band.isAutoHeight()) {
             cellsAdjuster.adjustCells(band);
             final double mostBottomCellPos = getMostBottomCellPosition(band);
-            band.setHeightMm(mostBottomCellPos);
+            double height = mostBottomCellPos;         
+            Border b = band.getBorder();
+            double bottomBorder = b == null ? 0 : b.getOnBottom() ? b.getBottomThicknessMm() : 0;
+            double topBorder = b == null ? 0 : b.getOnTop() ? b.getTopThicknessMm() : 0;
+
+            if (height == 0.0) {
+                height += topBorder;
+            } else {
+                height = Math.max(topBorder, height);
+            }
+            height += bottomBorder;
+            band.setHeightMm(height);
         } else {
             final double oldMostBottomCellPos = getMostBottomCellPosition(band);
             cellsAdjuster.adjustCells(band);
@@ -1026,33 +1175,18 @@ public class FoReportGenerator extends AbstractReportGenerator {
     }
 
     @Override
-    protected byte[] setupDbImageCellSize(AdsReportDbImageCell cell, String mimeType, byte[] imageData) {
+    protected byte[] setupDbImageCellSize(AdsReportDbImageCell cell, String mimeType, byte[] imageData, boolean dbImageResizeSupressed) {
         if (mimeType == null || imageData == null || imageData.length == 0) {
             return imageData;
         }
-        if (!mimeType.endsWith("svg")) {
-
+        double[] bordersSize = getBorderSize(cell, false);
+        double vBorder = bordersSize[0];
+        double hBorder = bordersSize[1];
+        double imageWidth = cell.getWidthMm() - cell.getMarginLeftMm() - cell.getMarginRightMm() - hBorder;
+        double imageHeight = cell.getHeightMm() - cell.getMarginTopMm() - cell.getMarginBottomMm() - vBorder;
+        EImageScaleType scaleType = cell.getScaleType();
+        if (!mimeType.contains("/svg")) {
             try {
-                double vBorder = 0;
-                double hBorder = 0;
-                if (cell.getBorder() != null) {
-                    double t = cell.getBorder().getThicknessMm();
-                    if (cell.getBorder().getOnLeft()) {
-                        hBorder += t;
-                    }
-                    if (cell.getBorder().getOnRight()) {
-                        hBorder += t;
-                    }
-                    if (cell.getBorder().getOnTop()) {
-                        vBorder += t;
-                    }
-                    if (cell.getBorder().getOnBottom()) {
-                        vBorder += t;
-                    }
-                }
-                EImageScaleType scaleType = cell.getScaleType();
-                double imageWidth = cell.getWidthMm() - cell.getMarginLeftMm() - cell.getMarginRightMm() - hBorder;
-                double imageHeight = cell.getHeightMm() - cell.getMarginTopMm() - cell.getMarginBottomMm() - vBorder;
                 BufferedImage image = ImageIO.read(new ByteArrayInputStream(imageData));
                 double requestedWidth = px2mm(image.getWidth());
                 double requestedHeight = px2mm(image.getHeight());
@@ -1090,18 +1224,8 @@ public class FoReportGenerator extends AbstractReportGenerator {
                         cell.setAdjustHeight(true);
                         return getSubImage(image, left, top, w, h);
                     case RESIZE_CONTAINER:
-                        if (requestedWidth == 0) {
-                            requestedHeight = cell.getMarginTopMm() + cell.getMarginBottomMm() + vBorder;
-                        } else {
-                            double ratio = requestedHeight / requestedWidth;
-                            if (requestedWidth > imageWidth) {
-                                requestedWidth = imageWidth;
-                                requestedHeight = requestedWidth * ratio + cell.getMarginTopMm() + cell.getMarginBottomMm() + vBorder;
-                            }
-                        }
-                        cell.setAdjustHeightMm(requestedHeight);
-                        cell.setAdjustHeight(true);
-                        return scaleImageToSizeMM(image, requestedWidth, requestedHeight);
+                        double[] requestedSize = resizeContainer(cell, imageWidth, imageHeight, requestedWidth, requestedHeight, vBorder);
+                        return !dbImageResizeSupressed && cell.isResizeImage() ? scaleImageToSizeMM(image, requestedSize[0], requestedSize[1]) : imageData;
                     case FIT_TO_CONTAINER:
                         //compute max width and height
                         if (requestedWidth == 0 || requestedHeight == 0) {
@@ -1115,21 +1239,80 @@ public class FoReportGenerator extends AbstractReportGenerator {
                         requestedHeight *= scaleFactor;
                         cell.setAdjustHeightMm(imageHeight);
                         cell.setAdjustHeight(true);
-                        return scaleImageToSizeMM(image, requestedWidth, requestedHeight);
+                        return !dbImageResizeSupressed && cell.isResizeImage() ? scaleImageToSizeMM(image, requestedWidth, requestedHeight) : imageData;
                     case SCALE_TO_CONTAINER://breaks image ratio   
                         cell.setAdjustHeightMm(imageHeight);
                         cell.setAdjustHeight(true);
-                        return scaleImageToSizeMM(image, imageWidth, imageHeight);
+                        return !dbImageResizeSupressed && cell.isResizeImage() ? scaleImageToSizeMM(image, imageWidth, imageHeight) : imageData;
                 }
 
             } catch (IOException ex) {
                 Logger.getLogger(getClass().getName()).log(Level.FINE, "Unable to decode db image", ex);
                 //ignore
             }
+        } else {
+            if (scaleType == EImageScaleType.RESIZE_CONTAINER){
+                try (InputStream is = new ByteArrayInputStream(imageData)) {
+                    String parser = XMLResourceDescriptor.getXMLParserClassName();
+                    SAXSVGDocumentFactory factory = new SAXSVGDocumentFactory(parser);
+                    SVGDocument svgDocument = (SVGDocument) factory.createDocument(null, is);
+                    final SVGSVGElement rootElement = svgDocument.getRootElement();
+                    final UserAgentAdapter userAgentAdapter = new UserAgentAdapter();
+                    final BridgeContext bridgeContext = new BridgeContext(userAgentAdapter);
+                    final GVTBuilder builder = new GVTBuilder();
+                    final GraphicsNode graphicsNode = builder.build(bridgeContext, svgDocument);
+                    Rectangle2D bounds = graphicsNode.getBounds();
+                    final double originalWidth = getLengthMM(rootElement.getWidth(), bounds == null? 0: bounds.getWidth());
+                    final double originalHeight = getLengthMM(rootElement.getHeight(), bounds == null? 0: bounds.getHeight());    
+                    resizeContainer(cell, imageWidth, imageHeight, originalWidth, originalHeight, vBorder);
+                } catch (IOException ex) {
+                    Logger.getLogger(FoReportGenerator.class.getName()).log(Level.SEVERE, "Unable to decode db image", ex);
+                }
+            } else {
+                cell.setAdjustHeightMm(imageHeight);
+                cell.setAdjustHeight(true);
+            }
         }
+        
         return imageData;
     }
-
+    
+    private double[] resizeContainer(AdsReportDbImageCell cell, double imageWidth, double imageHeight, 
+            double requestedWidth, double requestedHeight, double vBorder) {
+        if (requestedWidth == 0) {
+            requestedHeight = cell.getMarginTopMm() + cell.getMarginBottomMm() + vBorder;
+        } else {
+            double ratio = requestedHeight / requestedWidth;
+            if (requestedWidth > imageWidth) {
+                requestedWidth = imageWidth;
+                requestedHeight = requestedWidth * ratio + cell.getMarginTopMm() + cell.getMarginBottomMm() + vBorder;
+            }
+        }
+        cell.setAdjustHeightMm(requestedHeight);
+        cell.setAdjustHeight(true);
+        return new double[]{requestedWidth, requestedHeight};
+    }
+    
+    private static double getLengthMM(SVGAnimatedLength animatedLength, double defaults) {
+        final SVGLength length = animatedLength.getBaseVal();
+        final int initType = length.getUnitType();
+        final double width = length.getValueInSpecifiedUnits();
+        switch (initType) {
+            case SVGLength.SVG_LENGTHTYPE_PX:
+            case SVGLength.SVG_LENGTHTYPE_NUMBER:
+                return AdsReportUtils.pts2mm(width);
+            case SVGLength.SVG_LENGTHTYPE_PT:
+                //A pt is 1/72 of an in, and a px is 1/96 of an in. A px is therefore 0.75 pt
+                return AdsReportUtils.pts2mm(width / 0.75);
+            case SVGLength.SVG_LENGTHTYPE_MM:
+                return width;
+            case SVGLength.SVG_LENGTHTYPE_CM:
+                return width * 100;
+            default:
+                return AdsReportUtils.pts2mm(defaults);
+        }
+    }
+    
     private byte[] scaleImageToSizeMM(Image image, double widthMM, double heightMM) throws IOException {
         int cellWidth = mm2px(Math.floor(widthMM));
         int cellHeight = mm2px(Math.floor(heightMM));
@@ -1143,8 +1326,6 @@ public class FoReportGenerator extends AbstractReportGenerator {
         }
         final ByteArrayOutputStream out = new ByteArrayOutputStream();
         ImageIO.write(target, "png", out);
-        File outFile = new File("/home/akrylov/BUG/WireCardEditor/WDB_converted.png");
-        ImageIO.write(target, "png", outFile);
         return out.toByteArray();
     }
 
@@ -1233,6 +1414,7 @@ public class FoReportGenerator extends AbstractReportGenerator {
 
     private void closeRoot() throws XMLStreamException {
         root.end();
+        ranges.clear();
     }
 
 //    @Override
@@ -1276,4 +1458,48 @@ public class FoReportGenerator extends AbstractReportGenerator {
         super.finishFile(genDataList);
     }
 
+    @Override
+    protected void beforeCloseGroup(ReportGenData reportGenData, int groupIndex) {
+        super.beforeCloseGroup(reportGenData, groupIndex);
+        if (!ranges.isEmpty()) {
+            for (AdsReportBand band : ranges.keySet()) {
+                if (band.getType() == EReportBandType.DETAIL && reportGenData.form.getBands().contains(band)) {
+                    ZebraStripingInfo info = ranges.get(band);
+                    info.clear();
+                }
+            }
+        }
+    }
+
+    @Override
+    protected void afterSubReportClose(SubReportGenData subReportGenData) {
+        super.afterSubReportClose(subReportGenData);
+        if (!ranges.isEmpty()) {
+            Iterator<AdsReportBand> bands = ranges.keySet().iterator();
+            while (bands.hasNext()) {
+                AdsReportBand band = bands.next();
+                if (subReportGenData.form.getBands().contains(band)) {
+                    bands.remove();
+                }
+            }
+        }
+    }
+    private Border calcCellTopBorder(final AdsReportCell cell, AdjustedCell adjustedCell) {
+        Border border = cell.getBorder();
+        if (border != null) {
+            border = border.copy(false);
+            if (adjustedCell.wasSeparated()) {//|| adjustedCell.wasWrapped()
+                border.setOnTop(false);
+            }
+        }
+        return border;
+    }
+
+    @Override
+    protected void adjustCellsToColumns(AdsReportBand container) {
+        if (columnsSettings != null) {
+            ReportColumnsAdjuster adjuster = new ReportColumnsAdjuster(container, columnsSettings, new FoCellWrapperFactory());
+            adjuster.adjustColumnsBySettings();
+        }
+    }        
 }
